style.css
@import url("https://fonts.googleapis.com/css2?family=Bangers&display=swap");
* {
  font-family: "Bangers", cursive;
  color: white;
}
.menu {
  background-color: black;
}
.card-section,
li,
p {
  background-color: #000000;
}
form {
  width: 340px;
  height: 39px;
}
a {
  color: white;
}
a:hover,
li:hover {
  background-color: #f0131e;
}
#searchButton .searchBar a .is-dropdown-submenu-parent .menu {
  height: 39px;
}
#searchButton:hover {
  background-color: #f0131e;
}
h4 {
  font-family: "Bangers", cursive;
  color: yellow;
  text-align: center;
}
.grid-x.grid-margin-x.small-up-2.medium-up-3 {
  padding-top: 15px;
  background-color: black;
  border: 30px solid white;
}
p {
  color: yellow;
}
.zoom:hover {
  transform: scale(1.2);
}
.card-section:hover {
  background: #f0131e;
  /* This section is the hover for the cards already displayed */
}
.card {
  background: black;
}
.card:hover {
  background: #f0131e;
}

#doodle {
  color: red;
}

#doodle,
p {
  color: white;
}

/* modal stuff  */

.modalContainer {
    background-color: black;
}

#modalHeroImage {
    max-width: 300px;
    float: left;
    margin: 9px;
}

.modalPics {
    max-width: 200px;
    display: inline;
}

.modalP{
    color: red;
}

